2003-11-02  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: bump to 0.4.

2003-10-29  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.c (send_file): after sending the file, read from network
	until remote closes connection. Fixes sending files to a mIRC DCC
	server.

	* dccsend.c (main): add undocumented -d flag which spews some
	debugging output.

2003-10-28  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.c (main_loop): if remotenick has not been specified,
	fill in the variable with the nick remote sent.

2003-10-26  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* child.c (read_file): close connection when exactly the expected
	number of bytes has been received.

	* dccsend.c (main_loop): report errors when closing network
	connection.

2003-08-04  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* contrib/dccsend.pl: Add script from David Oftedal for xchat
	using dccsend instead of /dcc send for firewall protected hosts.

	* dccsend.c: add prototypes.

	* config.guess, config.sub, depcomp, install-sh: update
	from automake 1.7.6.

2003-05-25  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.mdoc: remove -r note from BUGS.
	* dccsend.man: regen.

	* dccsend.c: use more code from libdcc.
	(main_loop): verify remote nick vs. command line argument.

	* lib/Makefile.am: rename to libdcc.
	* Makefile.am: adapt to rename.

	* child.c: replace parse_get_line with new parse_reply from
	libdcc.
	* lib/dcc.c: add parse_reply.
	* lib/dcc.h: add parse_reply.

2003-05-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* child.c (get_line_from_client): move from here...
	* lib/dcc.c: ... to here
	* lib/dcc.h: new file.

2003-05-14  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* child.c (get_line_from_client): restructure a bit for
	easier generalisation.
	(child_loop): adapt.

	* dccserver.h: only have minimal includes here.
	* child.c: add includes.

	* dccserver.c: add includes.
